--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,13 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "web3": "^4.6.0"
+    "web3": "^4.6.0",
+    "fabric-ca-client": "^2.2.19",
+    "fabric-network": "^2.2.19",
+    "fabric-common": "^2.2.17",
+    "elliptic": "^6.5.4",
+    "openssl-nodejs": "^1.0.5",
+    "jsrsasign": "^10.5.27"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
