--- a/app/package.json
+++ b/app/package.json
@@ -9,18 +9,19 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "elliptic": "^6.5.4",
+    "eth-sig-util": "^3.0.1",
     "express": "~4.16.1",
+    "fabric-ca-client": "^2.2.19",
+    "fabric-common": "^2.2.17",
+    "fabric-network": "^2.2.19",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1",
-    "web3": "^4.6.0",
-    "fabric-ca-client": "^2.2.19",
-    "fabric-network": "^2.2.19",
-    "fabric-common": "^2.2.17",
-    "elliptic": "^6.5.4",
-    "openssl-nodejs": "^1.0.5",
     "jsrsasign": "^10.5.27",
-    "eth-sig-util": "^3.0.1"
+    "morgan": "~1.9.1",
+    "openssl-nodejs": "^1.0.5",
+    "sqlite3": "^5.1.7",
+    "web3": "^4.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
